# teuncmtester

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: blank.yml
src/teuncmtester/: __about__.py  __init__.py
