[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teuncmtester"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "teuncm", email = "teun.c.mathijssen@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/teuncmtester#readme"
Issues = "https://github.com/unknown/teuncmtester/issues"
Source = "https://github.com/unknown/teuncmtester"

[tool.hatch.version]
path = "src/teuncmtester/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/teuncmtester tests}"

[tool.coverage.run]
source_pkgs = ["teuncmtester", "tests"]
branch = true
parallel = true
omit = [
  "src/teuncmtester/__about__.py",
]

[tool.coverage.paths]
teuncmtester = ["src/teuncmtester", "*/teuncmtester/src/teuncmtester"]
tests = ["tests", "*/teuncmtester/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
